add event page done

--- a/src/CommonStyles/style.scss
+++ b/src/CommonStyles/style.scss
@@ -1,17 +1,17 @@
 .custom-large-btn {
   width: 200px;
-  background-color: #3368c6;
+  background-color: #2A9D8F;
   color: white;
   padding: 5px 20px;
-  border: 3px solid #3368c6;
+  border: 3px solid #2A9D8F;
   border-radius: 5px;
 }
 
 .custom-btn {
-  background-color: #3368c6;
+  background-color: #2A9D8F;
   color: white;
   padding: 5px 20px;
-  border: 3px solid #3368c6;
+  border: 3px solid #2A9D8F;
   border-radius: 5px;
 }
 
@@ -24,16 +24,16 @@
 
 // .custom-large-btn:hover {
 //   background-color: white;
-//   color: #3368c6;
-//   border: 3px solid #3368c6;
+//   color: #2A9D8F;
+//   border: 3px solid #2A9D8F;
 // }
 
 .blank-btn {
   width: 200px;
   background-color: white;
-  color: #3368c6;
+  color: #2A9D8F;
   padding: 5px 30px;
-  border: 3px solid #3368c6;
+  border: 3px solid #2A9D8F;
   border-radius: 5px;
 }
 
@@ -53,13 +53,13 @@
 }
 
 .dashboard-item:hover {
-  background-color: #1f68e6;
+  background-color: #2A9D8F;
   color: white;
   border-radius: 10px;
 }
 
 .custom-headline {
-  color: #1f68e6;
+  color: #2A9D8F;
 }
 
 .custom-para {
