--- a/src/components/CommonComponents/AddressBar/AddressBar.module.scss
+++ b/src/components/CommonComponents/AddressBar/AddressBar.module.scss
@@ -1,5 +1,5 @@
 .address-container {
-  background-color: #3368c6;
+  background-color: #2A9D8F;
   color: white;
 }
 
@@ -12,6 +12,6 @@
 }
 
 .social-icons {
-  color: #3368c6;
+  color: #2A9D8F;
   width: 150px;
 }
