--- a/src/components/CommonComponents/Footer/Footer.module.scss
+++ b/src/components/CommonComponents/Footer/Footer.module.scss
@@ -1,7 +1,7 @@
 footer {
   padding: 50px 0px;
   margin-top: 150px;
-  background-color: #3368c6;
+  background-color: #2A9D8F;
 }
 
 .footer-links li {
